fixed overflow

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -315,6 +315,7 @@ a:hover {
 @media only screen and (min-width: 600px) {
 
 body {
+    overflow-x: hidden;
 font-family: Roboto,
 -apple-system,
 BlinkMacSystemFont,
